@@ -458,7 +458,14 @@ Returns the position of <I>item</I> in the list.
  ?<I>option value...</I>?
 </DT><DD>
 
+<p>
 Inserts a new item identified by <I>item</I> in the list at position <I>index</I>.
+</p>
+
+<p>
+Any instance of <i>#auto</i> within the item name will be replaced by the
+number of the item in the order of insertion.
+</p>
 
 <P>
 <DL><DT><A NAME="Item-data"><B>-data</B></A></DT>
