@@ -530,8 +530,16 @@ Returns the position of <I>node</I> in its parent.
  ?<I>option value...</I>?
 </DT><DD>
 
-Inserts a new node identified by <I>node</I> in the children list of <I>parent</I>
-at position <I>index</I>.
+<p>
+Inserts a new node identified by <I>node</I> in the children list of
+<I>parent</I> at position <I>index</I>.
+</p>
+
+<p>
+Any instance of <i>#auto</i> within the node name will be replaced by the
+number of the item in the order of insertion.
+</p>
+
 
 <P>
 <DL><DT><A NAME="Node-data"><B>-data</B></A></DT>
